# Iniciacao-Cientifica

./: .env  README.md  acesso.py  app.py  baixar_arquivos.py  check_env.py  comando.txt  docker-compose.yml  etl_csv.py  listar_arquivos.py  pyproject.toml  requirements.txt
api/: main.py  routes.py
data/: analise_vendas.csv  arquivo.csv  meu_arquivo.csv  sample_data.csv  test.csv
docker/: docker-compose.yml
docs/: comando.txt  env.txt  passo-a-passo.txt
researchers_scripts/: README.md  download_dataset.py  download_file.py  list_bucket_contents.py  list_buckets.py  list_datalake.py  loader.py  login_datalake.sh  minio_loader.py  read_dataset.py  read_file.py  upload_dataset.py  upload_directory.py  upload_file.py
src/: README.md  backup_datalake.py  download.py  download_service.py  list.py  list_service.py  loader.py  logger.py  main.py  minio_client.py  upload.py  upload_service.py
src/models/: auth.py
src/utils/: session.py  token.py
